--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,5 +34,16 @@ services:
       restart: always
       ports:
         - 8080:8080
+    
+    redis:
+      image: redis:latest
+      container_name: redis-container
+      ports:
+        - "6379:6379"  # Exposes Redis on port 6379
+      volumes:
+        - redis-data:/data  # Persist Redis data across container restarts
+      
 volumes:
   pgdata:
+  redis-data:  
+  
